1999-10-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* refclock_oncore.c: 
	* refclock_mx4200.c: 
	* refclock_chu.c: 
	* refclock_atom.c: 
	* ntp_refclock.c: 
	* ntp_peer.c: 
	* ntp_loopfilter.c: 
	* include/ntp_refclock.h: 
	Various cleanup and fixes
	From: Dave Mills <mills@udel.edu>

1999-10-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c (CONFIG_FILE): NT changes
	From: Sven Dietrich <Sven_Dietrich@trimble.com>

1999-10-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: sys/timepps.h verification changes

	* ntpd/refclock_atom.c (atom_poll): PPS cleanup
	From: Dave Mills <mills@udel.edu>
	(atom_pps): Portability patch
	From: John Hay <jhay@mikom.csir.co.za>


	* libntp/msyslog.c: 
	* libntp/gpstolfp.c: 
	Lint cleanup
	From: Jonathan Stone <jonathan@dsg.stanford.edu>

	* parseutil/dcfd.c:  abs() -> l_abs(), time.h (AIX 4.3.2 patches)
	From: Dana Kaempen <decay@flash.net>

	* ntpd/refclock_oncore.c: 
	* ntpd/refclock_atom.c: 
	* ntpd/ntp_refclock.c: 
	PPS cleanup
	From: John.Hay@mikom.csir.co.za
	
	* util/ntptime.c: 
	* ntpdate/ntptimeset.c: 
	* ntpdate/ntpdate.c: 
	* ntpd/refclock_trak.c: 
	* ntpd/refclock_oncore.c: 
	* ntpd/refclock_mx4200.c: 
	* ntpd/refclock_msfees.c: 
	* ntpd/refclock_atom.c: 
	* ntpd/ntp_control.c: 
	* ntpd/ntp_config.c: 
	* configure.in: 
	* configure: 
	PPS, Solaris 7, cleanup patches
	From: Marc.Brett@westgeo.com

	* ports/winnt/ntptrace/ntptrace.dsp: 
	* ports/winnt/ntpq/ntpq.dsp: 
	* ports/winnt/ntpdc/ntpdc.dsp: 
	* ports/winnt/ntpdate/ntpdate.dsp: 
	* ports/winnt/ntpd/refclock_trimbledc.c: 
	* ports/winnt/ntpd/ntpd.dsp: 
	* ports/winnt/ntpd/ntp_iocompletionport.c: 
	* ports/winnt/ntpd/nt_clockstuff.c: 
	* ports/winnt/libntp/util_clockstuff.c: 
	* ports/winnt/libntp/libntp.dsp: 
	* ports/winnt/libntp/SetSystemTime.c: 
	* ports/winnt/instsrv/instsrv.c: 
	* ports/winnt/include/sys/ioctl.h: 
	* ports/winnt/include/termios.h: 
	* ports/winnt/include/config.h: 
	* ports/winnt/include/clockstuff.h: 